# lol-esports-manager

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts  vitest.run.mjs
.claude/: settings.local.json
docs/: README.md  manager-staff-qa-checklist.md
e2e/: app-shell.spec.ts
scripts/: android-home-build.ps1  notion-sync.mjs  replace_team_block.cjs  tauri-before-build.mjs
src/: App.css  App.tsx  env.d.ts  index.css  main.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop-stronghold.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_add_division.sql  003_champions.sql  004_daily_calendar.sql  005_add_indexes.sql  006_player_traits.sql  007_team_finances.sql  008_playoff.sql  009_transfer_market.sql  010_tournaments.sql  011_sponsors.sql  012_player_relations.sql  013_tournament_expansion.sql  014_player_game_stats.sql  015_team_play_style.sql  016_scouting.sql  017_training.sql  018_staff.sql  019_board_expectations.sql  020_tactics.sql  021_awards.sql  022_academy.sql  023_news_system.sql  024_player_complaints.sql  025_save_slots.sql  026_records.sql  027_facilities.sql  028_staff_fa.sql  029_social_reactions.sql  030_rivalry.sql  031_manager_profile.sql  032_injuries.sql  033_retirement.sql  034_offseason.sql  035_player_goals.sql  036_agents.sql  037_nationality_rules.sql  038_team_talks.sql  039_promises.sql  040_board_requests.sql  (+22 more)
src-tauri/src/: lib.rs  main.rs  ollama_manager.rs
src-tauri/src/commands/: llm.rs  rag.rs
(+422 files in other folders)
