[package]
name = "lol-esports-manager"
version = "0.1.0"
description = "LoL Esports Manager Simulation Game"
authors = ["you"]
edition = "2021"

[lib]
name = "lol_esports_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "blocking", "rustls-tls"] }
futures-util = "0.3"
tokio = { version = "1", features = ["time"] }
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-stronghold = "2"
